syntax = "proto3";

option java_multiple_files = false;
option java_outer_classname = "AcctProto";
option optimize_for = SPEED;

package com.ccb.cloud.protobuf.proto.iequip;

message AcctRegister {
    //短信验证码
    string veriCode = 1;
    //验证码序号
    string codeSN = 2;
    //注册账号信息
    Acct acct = 3;
}

message AcctUpdCredential {
    //更新方式
    string updTp = 1;
    //账号ID
    string acctId = 2;
    //旧密码
    string oldCredential = 3;
    //新密码
    string newCredential = 4;
    //注册手机号
    string acctPhone = 5;
    //短信验证码
    string veriCode = 6;
    //验证码序号
    string codeSN = 7;
}

message AcctUpdPhone {
    /*原注册手机号*/
    string oldAcctPhone = 1;
    /*原手机短信验证码*/
    string oldVeriCode = 2;
    /*验证码序号*/
    string oldCodeSN = 3;
    /*新手机号*/
    string newAcctPhone = 4;
    /*新手机短信验证码*/
    string newVeriCode = 5;
    /*验证码序号*/
    string newCodeSN = 6;
    /*账号ID*/
    string acctId = 7;
}

message Acct {
    string acctId = 1;
    string acctNm = 2;
    string acctPhone = 3;
    string acctTp = 4;
    string rlnmAuthenSt = 5;
    string rlnmAuthenMsg = 6;
    string authenPhone = 7;
    string sbjNm = 8;
    string sbjCrdtTp = 9;
    string sbjCrdtNo = 10;
    string unnSocCrCd = 11;
    string entNm = 12;
    string entCrdtTp = 13;
    string entCrdtNo = 14;
    string rspbpsnNm = 15;
    string rspbpsnCrdtTp = 16;
    string rspbpsnCrdtNo = 17;
    int64 lclCrtTms = 18;
    string credential = 19;
}
